--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}Pagina principal{% endblock %}
 {% block content %}
-
-
-    <h1>Hello! {{ user }}</h1>
     {#
         {% for user in users %}
             <p>ID: {{user._id}}</p>
@@ -26,15 +23,16 @@
         gallery_1:Binary('', 0)
     #}
     {% for post in posts %}
-        <div class="card" style="width: 18rem;">
-                <!--img class="card-img-top" src="{url_for('gallery', filename={{post.post_cover}} ) }" alt="{{ post.post_title }}"-->
-                 <img class="card-img-top" src="{{url_for('upload', filename=post.post_cover)}}" alt="{{ post.post_title }}">
-                <div class="card-body">
-                    <h5 class="card-title">{{ post.post_title }}. {{ post.subtitle }}</h5>
-                    <p class="card-text">{{ post.post_review }}</p>
-                    <p>Posted by: {{ post.posted_by }}</p>
-                    <a href="{{url_for('game_review', review_name=post.post_title)}}" class="btn btn-primary">Read more</a>
-                </div>
+    <div class="col-lg-6">
+        <div class="card home-cards" >
+                <img class="card-img-top" src="{{url_for('upload', filename=post.post_cover)}}" alt="{{ post.post_title }}">
+            <div class="card-body" style="overflow: hidden;">
+                <h5 class="card-title">{{ post.post_title }}. {{ post.post_subtitle }}</h5>
+                <p class="card-text card-text-container">{{ post.post_review }}</p>
+                <p class="footer-card">Posted by: {{ post.posted_by }}<a href="{{url_for('game_review', review_id=post._id)}}" class="btn btn-primary">Read more</a></p>
+                
             </div>
+        </div>
+    </div>
     {% endfor %}
 {% endblock %}
