--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -21,6 +21,13 @@
                     </div>    
                 </div>
             </div>
+            {% if 'username' in session %}
+            <div class="row">
+                <div class="col-12">
+                    <a href="{{ url_for('edit_post', post_id=post._id) }}" class="edit_post">Edit</a>
+                </div>
+            </div>
+            {% endif %}
         </article>
 
         <article>
