--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -33,15 +33,11 @@
         <article>
             <div class="game-header text-white">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 game-title-container">
                         <img src="{{ url_for('upload', filename=post.post_cover) }}" alt="" class="game-cover" style="width: 100%;">
                     
                         <div class="row title-background ">
-                            <div class="col-lg-2 col-xl-2 d-flex justify-content-around">
-                                {% for pegi in post.pegi_desc %}
-                                    <div class="square-img pegi-size {{ pegi }}"></div>
-                                {% endfor %}
-                            </div>
+                            
 
                             <div class="col-md-9 col-lg-8 col-xl-8 title-container" style="width: 100%;">
                                 <div class="game-title h3"><span>{{ post.post_title }}: {{ post.post_subtitle }}</span>
@@ -52,9 +48,20 @@
                                 </div>
                                 <div class="square-img h4">Platforms: 
                                     {% for platform in post.game_platform %}
-                                        <span class="platform">{{ platform }}</span>
+                                        <span class="platform">{{ platform }} </span>
                                     {% endfor %}
                                 </div>  
+                            </div>
+
+                            <div class="col-lg-2 col-xl-2 d-flex justify-content-around">
+                                <div class="square-img pegi-size pegi3">
+                                    
+                                </div>
+                                <!-- {% for pegi in post.pegi_desc %}
+                                    <div class="square-img pegi-size {{ pegi }}">
+                                       <img src="{{ url_for('upload', filename=post.gallery_5) }}" alt="" class=" d-block w-100">
+                                    </div>
+                                {% endfor %} -->
                             </div>
 
                             <div class="col-sm-6 col-md-2 col-lg-2 col-xl-2 points-container">
@@ -74,37 +81,88 @@
         
         <article>
             <div class="row gallery">
-                    <div class="col-12 d-flex justify-content-around">
-                        <div class="square-img pegi3"></div>
-                        <div class="square-img pegi7"></div>
+                <div class="col-12">
+                    {% for pegi in pegi_description %}
+                        <div class="square-img {{ pegi }}">
+                    {% endfor %}
+                </div>
+                <div class="col-12">
+                    {% for pegi in pegi_rate %}
+                        <div class="square-img {{pegi}} ">
+                            <!-- <img src=".." alt=""> -->
+                        </div>
+                        <!-- <div class="square-img pegi7"></div>
                         <div class="square-img pegi12"></div>
                         <div class="square-img pegi16"></div>
-                        <div class="square-img pegi18"></div>
-                    </div>
-                </div>
+                        <div class="square-img pegi18"></div> -->
+                    {% endfor %}
+                </div>      
+                
+            </div>
+
+            
         </article>
 
-    <article>
-                <div class="row gallery">
-                    <div class="col-12 d-flex justify-content-around">
-                        <div class="square-img pegi3">
-                            <img src="{{ url_for('upload', filename=post.gallery_1) }}" alt="" class="square-img pegi3">
+    <!-- <article class="container">
+    <div class="row">
+        <div class="col-12">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="{{ url_for('upload', filename=post.gallery_1) }}" alt="" class="d-block w-100">
                         </div>
-                        <div class="square-img pegi3">
-                            <img src="{{ url_for('upload', filename=post.gallery_2) }}" alt="" class="square-img pegi3">
+                        <div class="carousel-item">
+                            <img src="{{ url_for('upload', filename=post.gallery_2) }}" alt="" class=" d-block w-100">
                         </div>
-                        <div class="square-img pegi3">
-                            <img src="{{ url_for('upload', filename=post.gallery_3) }}" alt="" class="square-img pegi3">
+                        <div class="carousel-item">
+                            <img src="{{ url_for('upload', filename=post.gallery_3) }}" alt="" class=" d-block w-100">
                         </div>
-                        <div class="square-img pegi3">
-                            <img src="{{ url_for('upload', filename=post.gallery_4) }}" alt="" class="square-img pegi3">
+                        <div class="carousel-item">
+                            <img src="{{ url_for('upload', filename=post.gallery_4) }}" alt="" class=" d-block w-100">
                         </div>
-                        <div class="square-img pegi3">
-                            <img src="{{ url_for('upload', filename=post.gallery_5) }}" alt="" class="square-img pegi3">
+                        <div class="carousel-item">
+                            <img src="{{ url_for('upload', filename=post.gallery_5) }}" alt="" class=" d-block w-100">
                         </div>
                     </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-        </article>
+        </div>
+    </div>
+        
+        <div class="row gallery">
+            <div class="col-12 d-flex justify-content-around">
+                <div class="square-img pegi3">
+                    <img src="{{ url_for('upload', filename=post.gallery_1) }}" alt="" class="square-img pegi3">
+                </div>
+                <div class="square-img pegi3">
+                    <img src="{{ url_for('upload', filename=post.gallery_2) }}" alt="" class="square-img pegi3">
+                </div>
+                <div class="square-img pegi3">
+                    <img src="{{ url_for('upload', filename=post.gallery_3) }}" alt="" class="square-img pegi3">
+                </div>
+                <div class="square-img pegi3">
+                    <img src="{{ url_for('upload', filename=post.gallery_4) }}" alt="" class="square-img pegi3">
+                </div>
+                <div class="square-img pegi3">
+                    <img src="{{ url_for('upload', filename=post.gallery_5) }}" alt="" class="square-img pegi3">
+                </div>
+            </div>
+        </div>
+    </article> -->
 
         <!--article>
             <div class=" pegi-container">
@@ -118,15 +176,15 @@
             </div>
         </article-->
 
-        <article class=" text-white">
+        <article class="container text-white">
             <div class="row ciritc-row">
-                <div class="pros-container col-6">
+                <div class="pros-container col-lg-6">
                     <div class="text-center">THE GOOD</div>
                     <div>
                         {{post.pros_content}}
                     </div>
                 </div>
-                <div class="cons-container col-6">
+                <div class="cons-container col-lg-6">
                     <div class="text-center">THE BAD</div>
                     <div>
                         {{post.cons_content}}
