Reorganizing base, index, post html files and styles.css to ensure that mobile fisrt approach

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,10 +35,10 @@ header{
 }
 
 
-main,
+/* main,
 .container{
     border: red 5px solid;
-}
+} */
 
 .main-container{
     /*background-color: rgba(242, 242, 242, .7);*/
@@ -75,7 +75,7 @@ main,
     height: 500px;
 }
 
- .card,
+.card,
 .home-cards{
     width: 450px; 
     height: 550px; 
@@ -102,8 +102,30 @@ main,
     margin-bottom: 10px;
     margin-right: auto;
     margin-left: auto;
-    
 }
+.card-container{
+    /* padding-left: 10px; */
+    margin: 10 px auto;
+    float: left;
+
+}
+
+.home-cards .card-body{
+    padding: 10px;
+}
+
+.card .card-text-container{
+    margin-bottom: 10px;
+}
+
+.card .footer-card{
+    margin: 0;
+}
+
+.footer-card .btn{
+    margin-left: auto;
+}
+
 /*****************************************/
 /** Reviews **/
 /*****************************************/
@@ -286,6 +308,21 @@ main,
 /*****************************************/
 /** Form **/
 /*****************************************/
+/* .input-group .label-input{
+    margin: 0;
+    padding: 0;
+} */
+
+.plattform,
+.description-container{
+    padding-left: 35px;
+}
+
+
+
+/*****************************************/
+/** Form **/
+/*****************************************/
 /* hr{
     background-color: white;
 } */
@@ -412,25 +449,32 @@ textarea{
 }
 
 
-/*
-@media (min-width: 576px) { ... }
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
-
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... }
-/*****************************************/
-/*****************************************/
-
-@media screen (min-width: 992px){
-    
 
 
+/* ************************************
+**  Queries  **
+***************************************
+    // Extra small devices (portrait phones, less than 576px)
+    @media (max-width: 575.98px) { ... }
 
+    // Small devices (landscape phones, 576px and up)
+    @media (min-width: 576px) and (max-width: 767.98px) { ... }
+
+    // Medium devices (tablets, 768px and up)
+    @media (min-width: 768px) and (max-width: 991.98px) { ... }
+
+    // Large devices (desktops, 992px and up)
+    @media (min-width: 992px) and (max-width: 1199.98px) { ... }
+
+    // Extra large devices (large desktops, 1200px and up)
+    @media (min-width: 1200px) { ... }
+***************************************/
+@media (min-width: 992px){
+    .card-container{
+        /* padding-left: 15px; */
+        margin-left: auto;
+        margin-right: auto;
+    }
 
     .form-login{
         width: 305px;
@@ -443,12 +487,50 @@ textarea{
     .login-input{
         margin-left: 16px;
     }
+
 }
 
-@media (min-width: 300px) and (max-width: 450px){
-    .col-12{
-        padding: 0 10px;
+
+@media (max-width: 575.98px) {
+
+    /* .row-cards-container{
+        margin: 0;
+        padding-left: auto;
+        padding-right: auto;
+    } */
+
+    .cards{
+        padding: 0;
+        min-width: 320px;
+        max-width: 400px;
+        margin: 6px;
     }
+
+    .post-container{
+        padding: 0;
+    }
+
+    .row-cards-container{
+        width: 100%;
+    }
+
+    /* .card,
+    .home-cards{
+        width: 350px; 
+        height: 550px; 
+        margin-top: 10px; 
+        margin-left: auto; 
+        margin-right: auto;
+        clear: both;
+        display: inline-block;
+    } */
+/* }
+
+
+@media (min-width: 300px) and (max-width: 450px){ */
+    /* .col-12{
+        padding: 0 10px;
+    } */
 
     .post-legend,
     fieldset p{
@@ -470,10 +552,10 @@ textarea{
         border-radius: 0;
     }
 
-    .post-container{
+    /* .post-container{
         margin: 0;
         padding: 0;
-    }
+    } */
 
     .form-login{
         width: 320px;
