--- a/templates/post.html
+++ b/templates/post.html
@@ -2,99 +2,187 @@
 {% block title %}Create a new post{% endblock %}
 {% block content %}
 
-<h2 class="post-heading">Review Post</h2>
-<form class="form form-post" method="POST" action="{{url_for('post_review')}}" enctype="multipart/form-data">
-    <div class="row">
-        <fieldset class="fieldset">
-        
-            <div class="game-title-section row">
-            <legend class="post-legend">Game Section</legend>
-                <div class="col-12">
-                    <label for="post-title">Game Title</label>
-                    <input type="text" name="post-title" id="post-title">
-                    <br>
-                    <br>
-                    <label for="post-subtitle">Game Title</label>
-                    <input type="text" name="post-subtitle" id="post-subtitle">
-                    <br>
-                    <br>
-                    <label for="release-date">Game Release: </label>
-                    <input type="date" name="release-date">
-                    <br>
-                    <label for="post-cover">Cover Picture</label>
-                    <input type="file" name="post-cover" id="post-cover">
-                    <hr>
-                    <label for="no_players">Number of playes:</label>
-                    <input type="number" name="no_players" id="no-players" min="1" max="16">
+<form class="form " method="POST" action="{{url_for('post_review')}}" enctype="multipart/form-data">
+    <fieldset class="fieldset">
+        <div class="game-title-section row form-group">                         
+            <div class="form-group col-12">
+                <h2 class="post-heading">Review Post</h2>
+                <legend class="post-legend">Game Section</legend>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <label for="post-title" class="input-group-text">Game Title</label>
+                    </div>
+                    <input type="text" class="form-control" name="post-title" id="post-title">
+                </div>
+
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <label for="post-title" class="input-group-text">Game Subtitle</label>
+                    </div>
+                    <input type="text" class="form-control" name="post-subtitle" id="post-subtitle">
+                </div>
+                
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="input-group mb-3">                           
+                            <div class="input-group-prepend">
+                                <label for="release-date" class="input-group-text" id="inputGroupFileAddon01"
+                                    >Game Release: 
+                                </label>
+                            </div>
+                            <div class="custom-file">
+                                <input type="date" class="form-control" name="release-date">
+                            </div>
+                        </div>
+                    </div>
                     
-                    <label for="score">Game Score: </label>
-                    <input type="number" name="game_score" id="game-score" min="0" max="100">
+                    <div class="col-lg-6">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <label class="input-group-text" for="post-cover">Cover Picture</label>
+                            </div>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" name="post-cover"  id="post-cover" aria-describedby="inputGroupFileAddon01">
+                                <label class="custom-file-label" for="post-cover">Choose file</label>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
+                <hr>
+
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="input-group mb-3">
+                            <label for="no_players" class="input-group-text"style="margin: 0;">Number of playes:</label>
+                            <input type="number" class="form-control" name="no_players" id="no-players" min="1" max="16">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <label for="score" class="input-group-text">Game Score: </label>
+                            </div>
+                            <input type="number" class="form-control" name="game_score" id="game-score" min="0" max="100">
+                        </div>
+                    </div>
+                </div>
+
             </div>
-            
+
             <hr>
             
-            <div class="pegi-field row">
-                <legend for="plattform">Platfforms:</legend>
-                <div class="plattform col-4">
+            <div class="pegi-field col-lg-6 col-md-6">
+                <legend for="plattform" class="form-check-label">Platfforms:</legend>
+                <div class="plattform form-group">
                     {% for platform in platforms %}
-                        <input type="checkbox" name="platform" value="{{platform}}" id="{{platform}}"><label for="{{platform}}">{{platform}}</label></br>
+                        <input type="checkbox" class="form-check-input" name="platform" value="{{platform}}" id="{{platform}}"><label for="{{platform}}">{{platform}}</label></br>
                     {% endfor %}
                 </div>
             </div>
 
-            <hr>
-
-            <div class="pegi-description row">
+            <div class="pegi-description col-lg-6 col-md-6">
                 <legend>Pegi Description</legend>
-                <div class="description-container col-4">
+                <div class="description-container form-group">
                     {% for pegi in pegi_desc %}
-                        <input type="checkbox" name="pegi-desc" value="{{pegi}}" id="{{pegi}}"><label for="{{pegi}}">{{pegi_desc[pegi]}}</label></br>
+                        <input type="checkbox" class="form-check-input" name="pegi-desc" value="{{pegi}}" id="{{pegi}}"><label class="" for="{{pegi}}">{{pegi_desc[pegi]}}</label></br>
                     {% endfor %}
                 </div>
-
             </div>
-
+            
             <hr>
-
+            
+            <div class="form-group  col-lg-12">
             <legend class="post-legend">Load 5 pictures for the post</legend>
             <p>Select five pictres for the review's gallery</p>
-            <div class="col-12">
-                <label for="gallery-1">Picture 1 </label>
-                <input type="file" name="gallery_1" id="gallery-1" >
+                <div class="input-group mb-3 col-lg-6">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroupFileAddon01">Picture 1 </span>
+                    </div>
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" name="gallery_1"  id="gallery-1" aria-describedby="gallery-1">
+                        <label class="custom-file-label" for="gallery-1">Choose file</label>
+                    </div>
+                </div>
+                <div class="input-group mb-3 col-lg-6">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroupFileAddon01">Picture 2 </span>
+                    </div>
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" name="gallery_2"  id="gallery-2" aria-describedby="gallery-2">
+                        <label class="custom-file-label" for="gallery-2">Choose file</label>
+                    </div>
+                </div>
+                <div class="input-group mb-3 col-lg-6">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroupFileAddon01">Picture 3 </span>
+                    </div>
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" name="gallery_3"  id="gallery-3" aria-describedby="gallery-3">
+                        <label class="custom-file-label" for="gallery-3">Choose file</label>
+                    </div>
+                </div>
+                <div class="input-group mb-3 col-lg-6">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroupFileAddon01">Picture 4 </span>
+                    </div>
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" name="gallery_4"  id="gallery-4" aria-describedby="gallery-4">
+                        <label class="custom-file-label" for="gallery-4">Choose file</label>
+                    </div>
+                </div>
+                <div class="input-group mb-3 col-lg-6">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroupFileAddon01">Picture 5 </span>
+                    </div>
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" name="gallery_5"  id="gallery-5" aria-describedby="gallery-5">
+                        <label class="custom-file-label" for="gallery-5">Choose file</label>
+                    </div>
+                </div>
+                <!-- <label for="gallery-1">Picture 1 </label>
+                <input type="file" class="form-control-file" name="gallery_1" id="gallery-1" >
                 <br>
                 <label for="gallery-2">Picture 2 </label>
-                <input type="file" name="gallery_2" id="gallery-2" >
+                <input type="file" class="form-control-file" name="gallery_2" id="gallery-2" >
                 <br>
                 <label for="gallery-3">Picture 3</label>
-                <input type="file" name="gallery_3" id="gallery-3" >
+                <input type="file" class="form-control-file" name="gallery_3" id="gallery-3" >
                 <br>
                 <label for="gallery-4">Picture 4</label>
-                <input type="file" name="gallery_4" id="gallery-4" >
+                <input type="file" class="form-control-file" name="gallery_4" id="gallery-4" >
                 <br>
                 <label for="gallery-5">Picture 5</label>
-                <input type="file" name="gallery_5" id="gallery-5" >
-                <br>
+                <input type="file" class="form-control-file" name="gallery_5" id="gallery-5" >
+                <br> -->
             </div>
             <hr>
-            <legend>Review Section</legend>
-            <div class="col-12">
-                <label for="pros" class="post-pros">Pros</label>
-                <textarea name="post-pros" id="pros" class="pros"></textarea>
-                <label for="cons" class="post-cons">Cons</label>
-                <textarea name="post-cons" id="cons" class="cons"></textarea>
-                <label for="post-review" class="post-review">Review</label>
-                <textarea name="post-review" id="post-review" class="post-review"></textarea>
+            
+            <div class="col-12 form-group">
+                <legend>Review Section</legend>
+                <div class="row">
+                    <div class="col-lg-6 mb-3">
+                        <label for="pros" class="post-pros input-group-text">Pros</label>
+                        <textarea name="post-pros" class="form-control" id="pros" class="pros"></textarea>                    
+                    </div>
+                    <div class="col-lg-6 mb-3">
+                        <label for="cons" class="post-cons input-group-text">Cons</label>
+                        <textarea name="post-cons" class="form-control" id="cons" class="cons"></textarea>                    
+                    </div>
+                    <div class="col-12 mb-3">
+                        <label for="post-review" class="post-review input-group-text">Review</label>
+                        <textarea name="post-review" class="form-control" id="post-review" class="post-review"></textarea>
+                    </div>
+                </div>
+                
+                
             </div>
 
-            
-        </fieldset>
-
-        <div class="col-12">
-            <input type="submit" value="Submit" class="submit btn btn-success">
-        </div>
-        
-    </div>
+            <div class="col-12 form-group">
+                <input type="submit" value="Submit" class=" form-control submit btn btn-success">
+            </div>
+        </div>  
+    </fieldset>
 </form>
 
 <div class="spacer col-12"></div>
